--- a/.github/workflows/deploy-firebase-hosting.yml
+++ b/.github/workflows/deploy-firebase-hosting.yml
@@ -35,5 +35,11 @@ jobs:
       - name: Gerar build
         run: npm run build
 
+      - name: Instalar Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Publicar no Firebase Hosting
+        run: firebase deploy --only hosting --project ${{ secrets.GCP_PROJECT_ID }}
+
       - name: Publicar no Firebase Hosting
         run: npx firebase-tools deploy --only hosting --project ${{ secrets.GCP_PROJECT_ID }}
