--- a/.github/workflows/deploy-firebase-hosting.yml
+++ b/.github/workflows/deploy-firebase-hosting.yml
@@ -13,16 +13,17 @@ permissions:
 jobs:
   build_e_deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Baixar código do repositório
         uses: actions/checkout@v4
 
       - name: Autenticar no Google Cloud (sem chave)
+        id: auth
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          create_credentials_file: true
 
       - name: Configurar Node.js
         uses: actions/setup-node@v4
@@ -35,11 +36,10 @@ jobs:
       - name: Gerar build
         run: npm run build
 
-      - name: Instalar Firebase CLI
-        run: npm install -g firebase-tools
-
       - name: Publicar no Firebase Hosting
-        run: firebase deploy --only hosting --project ${{ secrets.GCP_PROJECT_ID }}
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
+        run: npx firebase-tools deploy --only hosting --project ${{ secrets.GCP_PROJECT_ID }} --non-interactive
 
       - name: Publicar no Firebase Hosting
         run: npx firebase-tools deploy --only hosting --project ${{ secrets.GCP_PROJECT_ID }}
